fixed progress bars spacing in cards

--- a/public/main.css
+++ b/public/main.css
@@ -140,7 +140,6 @@
 }
 
 .progress-circle{
-  float:right;
   text-align:center;
   margin: auto;
 }
